--- a/RPGVXAcecn/rpgvxace/3110_db_outline.html
+++ b/RPGVXAcecn/rpgvxace/3110_db_outline.html
@@ -94,7 +94,7 @@
 <dd><p>在数据列表各项目前方的数字表示该数据的ID（固定编号）。这个ID可以用于事件指令中用变量指定需要处理的对象数据之类的情况。</p></dd>
 
 <dt>●备注栏的应用</dt>
-<dd><p>一部分数据（角色/职业/技能/道具/武器/防具/敌人/状态/图块）的设置项目中有一个备注栏。这个备注栏可以在制作游戏时用于自由记录备注，完全不影响游戏的进程。</p></dd>
+<dd><p>一部分数据（角色/职业/技能/道具/武器/防具/敌人/状态/图块）的设置项目中有一个备注栏。这个备注栏可以在制作游戏时用于自由记录备注，完全不影响游戏的内容。</p></dd>
 </dl>
 
 
