--- a/RPGVXAcecn/rgss/gc_tone.html
+++ b/RPGVXAcecn/rgss/gc_tone.html
@@ -38,6 +38,6 @@ type=text/css href="../style.css">
   <P>蓝色值（-255～255）。超出范围的数值会自动修正。</P>
   <DT>gray
   <DD>
-  <P>灰阶滤色镜强度值（0～255）。超出范围的数值会自动修正。</P>
+  <P>灰度滤镜强度值（0～255）。超出范围的数值会自动修正。</P>
   <P>当此值非 0 时，处理时间会比单独使用色调平衡调整来的长。</P></DD></DL>
 <H6></H6></BODY></HTML>
