--- a/RPGVXAcecn/rpgvxace/1140_intro_supporttool.html
+++ b/RPGVXAcecn/rpgvxace/1140_intro_supporttool.html
@@ -98,7 +98,7 @@
 <p>一般而言，有的时候会将[显示文章]之类的命令称为脚本。但是本软件中，脚本指的是比事件指令更加接近程序的一个概念。一切事件指令，事实上本身都不是程序，而是在经过脚本层的解释后执行的。</p>
 <p>由于脚本的编辑可以自定义游戏系统本身，是面向高级用户的功能，从而难度会变得更高。但是，只要制作出普通的游戏的话，根本不需要掌握脚本。一开始做游戏先不要管脚本，等到默认系统无法满足你的需求时再来挑战脚本吧。</p>
 
-<p>本软件的脚本引擎不是独立的简易语言，而是采用了硕果累累的「Ruby」脚本语言。Ruby的官方网站是<a href="http://www.ruby-lang.org/" target="_blank">http://www.ruby-lang.org/</a> です。</p>
+<p>本软件的脚本引擎不是独立的简易语言，而是采用了硕果累累的「Ruby」脚本语言。Ruby的官方网站是 <a href="http://www.ruby-lang.org/" target="_blank">http://www.ruby-lang.org/</a> 。</p>
 <p>「Ruby」是以松本行弘为中心开发的免费软件，用于记述大规模的游戏也拥有足够的性能。然而，「Ruby」本身是擅长文本处理的语言，直接用于游戏开发有一定困难。因此，这里使用的是将「Ruby」在游戏开发上特化的「RGSS」(Ruby Game Scripting System) 系统。详情请见<a href="../rgss/index.html">RGSS参考</a>。</p>
 
 <dl>
