--- a/RPGVXAcecn/intro/301_timer.html
+++ b/RPGVXAcecn/intro/301_timer.html
@@ -80,7 +80,7 @@ href="../rgss/gc_color.html">Color</a>
 
 
 <h2><a name="alias">别名</a></h2>
-<p>按照上述方式，这样就算是完成了「用大大的红字显示计时器的插件脚本」，不过若是真的要当成「插件」发布的时候，一旦将原本的方法全部改写，有可能会发生和其他的插件脚本相冲突的状况。所以若是不通过改写，而是想在原本的处理中的前后新增一些处理的话，会使用 <strong>alias</strong> （别名）这个功能。</p>
+<p>按照上述方式，这样就算是完成了「用大大的红字显示计时器的插件脚本」，不过若是真的要当成「插件」发布的时候，一旦将原本的方法全部改写，有可能会发生和其他的插件脚本相冲突的状况。所以若是不通过改写，而是想在原本的处理中的前后新增一些处理的话，会使用 <strong>alias</strong> （别名）功能。</p>
 <pre>
 class Sprite_Timer
   alias xxx001_create_bitmap create_bitmap
