--- a/RPGVXAcecn/rpgvxace/5150_ev_ref_actor.html
+++ b/RPGVXAcecn/rpgvxace/5150_ev_ref_actor.html
@@ -22,7 +22,7 @@
 <dt>操作</dt>
 <dd><p>指定操作的内容（增加/减少）</p></dd>
 <dt>数值</dt>
-<dd><p>指定体力值的增减量。增减一个定值时选择[常数]，并输入数值（1~9999）。用变量指定数值的话选择[变量]，并指定要使用的变量。</p></dd>
+<dd><p>指定体力值的增减量。增减一个定值时选择[常量]，并输入数值（1~9999）。用变量指定数值的话选择[变量]，并指定要使用的变量。</p></dd>
 <dt>允许导致无法战斗</dt>
 <dd><p>勾选后，由于减少体力值而导致体力值小于等于0时会附加无法战斗状态。不勾选的话，这种情况下HP会调整到1。</p></dd></dl></dd>
 </dl>
@@ -40,7 +40,7 @@
 <dt>操作</dt>
 <dd><p>指定操作的内容（增加/减少）</p></dd>
 <dt>数值</dt>
-<dd><p>指定魔力值的增减量。增减一个定值时选择[常数]，并输入数值（1~9999）。用变量指定数值的话选择[变量]，并指定要使用的变量。</p></dd></dl></dd>
+<dd><p>指定魔力值的增减量。增减一个定值时选择[常量]，并输入数值（1~9999）。用变量指定数值的话选择[变量]，并指定要使用的变量。</p></dd></dl></dd>
 </dl>
 <br>
 
@@ -84,7 +84,7 @@
 <dt>操作</dt>
 <dd><p>指定操作的内容（增加/减少）</p></dd>
 <dt>数值</dt>
-<dd><p>指定经验值的增减量。增减一个定值时选择[常数]，并输入数值（1~9999999）。用变量指定数值的话选择[变量]，并指定要使用的变量。</p></dd>
+<dd><p>指定经验值的增减量。增减一个定值时选择[常量]，并输入数值（1~9999999）。用变量指定数值的话选择[变量]，并指定要使用的变量。</p></dd>
 <dt>显示升级信息</dt>
 <dd><p>选择后，由于经验值增加而提升等级时，游戏画面上会显示提示消息。</p></dd></dl></dd>
 </dl>
@@ -102,7 +102,7 @@
 <dt>操作</dt>
 <dd><p>指定操作的内容（增加/减少）</p></dd>
 <dt>数值</dt>
-<dd><p>指定等级的增减量。增减一个定值时选择[常数]，并输入数值（1~98）。用变量指定数值的话选择[变量]，并指定要使用的变量。</p></dd>
+<dd><p>指定等级的增减量。增减一个定值时选择[常量]，并输入数值（1~98）。用变量指定数值的话选择[变量]，并指定要使用的变量。</p></dd>
 <dt>显示升级信息</dt>
 <dd><p>选择后，提升等级时游戏画面上会显示提示消息。</p></dd></dl></dd>
 </dl>
@@ -120,7 +120,7 @@
 <dt>操作</dt>
 <dd><p>指定操作的内容（增加/减少）</p></dd>
 <dt>数值</dt>
-<dd><p>指定能力值的增减量。增减一个定值时选择[常数]，并输入数值（1~9999）。用变量指定数值的话选择[变量]，并指定要使用的变量。</p></dd></dl></dd>
+<dd><p>指定能力值的增减量。增减一个定值时选择[常量]，并输入数值（1~9999）。用变量指定数值的话选择[变量]，并指定要使用的变量。</p></dd></dl></dd>
 </dl>
 <br>
 
