--- a/rgss/sc_integer.html
+++ b/rgss/sc_integer.html
@@ -36,8 +36,7 @@
 <dt>
 <var>self</var> &lt;=&gt; <var>other</var></dt>
 <dd>
-<p>比较 other 与 self；若是 self 大于 other 则返回正整数、若是 self 等于 other
-  则返回 0、若是 self 小于 other 则返回负整数。</p></dd>
+<p>比较 other 与 self；若 self 大于 other 则返回正整数，若 self 等于 other 则返回 0，若 self 小于 other 则返回负整数。</p></dd>
 <dt>
 <var>self</var> == <var>other</var></dt>
 <dt>
@@ -69,7 +68,7 @@
 <dt>chr</dt>
 <dd>
 <p>返回在字符表中数字对应的 1 位字符串。举例来说：65.chr 返回 "A"。</p>
-<p>使用这个方法的整数必须在 0～255的范围内。超出此范围的整数会抛出 <a href="s_exceptions.html#RangeError">RangeError</a> 异常。</p></dd>
+<p>使用这个方法的整数必须在 0～255 的范围内。超出此范围的整数会抛出 <a href="s_exceptions.html#RangeError">RangeError</a> 异常。</p></dd>
 <dt>
 <a name="L001200">downto(<var>min</var>) {|<var>n</var>| ...
   }</a></dt>
