--- a/rgss/gc_bitmap.html
+++ b/rgss/gc_bitmap.html
@@ -44,12 +44,12 @@
 <dt>blt(<var>x</var>, <var>y</var>, <var>src_bitmap</var>, <var>src_rect</var>[, <var>opacity</var>])</dt>
 <dd>
 <p>将位图 <var>src_bitmap</var> 的矩形 <var>src_rect</var>（<a href="gc_rect.html">Rect</a>）中的数据整体传送到当前位图的坐标 (<var>x</var>, <var>y</var>) 处。</p>
-<p><var>opacity</var> 是透明度，范围 0～255。</p></dd>
+<p><var>opacity</var> 是不透明度，范围 0～255。</p></dd>
 <dt>stretch_blt(<var>dest_rect</var>, <var>src_bitmap</var>, <var>src_rect</var>[, <var>opacity</var>])</dt>
 <dd>
 <p>将位图 <var>src_bitmap</var> 的矩形
 <var>src_rect</var>（<a href="gc_rect.html">Rect</a>）中的数据整体传送到当前位图的矩形 <var>dest_rect</var>（<a href="gc_rect.html">Rect</a>）处。</p>
-<p><var>opacity</var> 是透明度，范围 0～255。</p></dd>
+<p><var>opacity</var> 是不透明度，范围 0～255。</p></dd>
 <dt>fill_rect(<var>x</var>, <var>y</var>, <var>width</var>, <var>height</var>, <var>color</var>)</dt>
 <dt>fill_rect(<var>rect</var>, <var>color</var>)</dt>
 <dd>
