--- a/rpgvxace/index.html
+++ b/rpgvxace/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <div align="center">
-  <h3>
+<h3>
 <img src="img/vx%20ace_logo.png" alt="RPG Maker VX Ace"><br>
-      <strong>RPG Maker VX Ace 帮助文档</strong>
-  </h3>
+  <strong>RPG Maker VX Ace 帮助文档</strong>
+</h3>
 </div>
 <p>本帮助文档含有对「RPG Maker VX Ace」所具有的功能的说明。</p>
 <p>窗口的左侧为帮助的目录。在左侧选择你想要阅读的项目。当你清楚你需要调查的项目时，可以将左上角的标签切换至「索引」或「搜索」使搜索更加简便。</p>
@@ -19,7 +19,7 @@
 <p>此外，本软件大部分项目都有弹出的提示。把鼠标指针停留在编辑器上的项目一段时间之后，就会显示简单的说明。请善于运用这个功能。</p>
 <div align="center"><img src="img/0000_02.png" alt="弹出提示"></div>
 <br><br>
-<p align="center"><strong>汉化：<a href="http://rm.66rpg.com/" target="_blank">66RPG</a></strong></p>
+<p align="center"><strong>汉化：<a href="https://rpg.blue" target="_blank">Project1</a></strong></p>
 <h6></h6>
 &#169;2011 ENTERBRAIN, INC./YOJI OJIMA
 </body>
